--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,12 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@digital-invitation/core": "*",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "6.2.1",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "@digital-invitation/core": "*"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -67,5 +71,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "npx ts-node ./prisma/seed.ts"
   }
 }
